# kmoe-manga-downloader

./: .gitignore  AGENTS.md  README.md  kmdr.py  kox_sync.py  koxdl.py  pyproject.toml  requirements.txt
.github/workflow/: unit-test.yml
.github/workflows/: release-package.yml  unit-test.yml
core/: __init__.py  bases.py  defaults.py  registry.py  structure.py  utils.py
mirror/: mirrors.json
module/: __init__.py
module/authenticator/: CookieAuthenticator.py  LoginAuthenticator.py  utils.py
module/configurer/: ConfigClearer.py  ConfigUnsetter.py  OptionLister.py  OptionSetter.py  option_validate.py
module/downloader/: DirectDownloader.py  ReferViaDownloader.py  utils.py
module/lister/: BookUrlLister.py  FollowedBookLister.py  utils.py
module/picker/: ArgsFilterPicker.py  DefaultVolPicker.py  utils.py
skill/kmdr/: SKILL.md
skill/kmdr/assets/examples/: download.json  explain-download.json  pool.json  search.json
skill/kmdr/references/: commands.md  error-codes.md  output-format.md
src/kmdr/: __init__.py  main.py
src/kmdr/core/: __init__.py  background.py  bases.py  console.py  constants.py  context.py  defaults.py  encoder.py  error.py  patch.py  pool.py  protocol.py  registry.py  session.py  structure.py  task_query.py  utils.py
src/kmdr/module/: __init__.py
src/kmdr/module/authenticator/: CookieAuthenticator.py  LocalPoolAuthenticator.py  __init__.py  (+2 more)
tests/: test_async_retry_decorator.py  test_cred_pool.py  test_cred_schedule.py  test_kmdr.py  test_kmdr_config_option.py  test_kmdr_download.py  test_kmdr_login.py  test_utils_resolve_volme.py
(+35 files in other folders)
