[project]
name = "kmoe-manga-downloader"
dynamic = ["version"]
authors = [
    { name="Chris Zheng", email="chrisis58@outlook.com" },
]
description = "A CLI-downloader for site @kox.moe."
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
keywords = ["manga", "downloader", "kmoe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4~=4.13.4",
    "aiohttp~=3.12.15",
    "aiofiles~=24.1.0",
    "rich~=13.9.4",
    "yarl~=1.20.1",
    "typing-extensions~=4.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/chrisis58/kmoe-manga-downloader"
Issues = "https://github.com/chrisis58/kmoe-manga-downloader/issues"

[project.scripts]
kmdr = "kmdr.main:entry_point"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/kmdr/_version.py"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
target-version = "py39"
line-length = 150

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"